LettersParser.cpp

// Generated from Letters.g4 by ANTLR 4.13.1


#include "LettersVisitor.h"

#include "LettersParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LettersParserStaticData final {
  LettersParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LettersParserStaticData(const LettersParserStaticData&) = delete;
  LettersParserStaticData(LettersParserStaticData&&) = delete;
  LettersParserStaticData& operator=(const LettersParserStaticData&) = delete;
  LettersParserStaticData& operator=(LettersParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag lettersParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LettersParserStaticData *lettersParserStaticData = nullptr;

void lettersParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (lettersParserStaticData != nullptr) {
    return;
  }
#else
  assert(lettersParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LettersParserStaticData>(
    std::vector<std::string>{
      "program", "declList", "decl", "stmtList", "stmt", "ifStmt", "assignStmt", 
      "readStmt", "writeStmt", "jumpStmt", "expr", "addSubExpr", "mulDivExpr", 
      "equalsExpr", "compExpr", "atomExpr", "assignExpr", "vecIndexExpr", 
      "term", "local", "vecLit"
    },
    std::vector<std::string>{
      "", "'B'", "'N'", "'C'", "'V'", "'P'", "'I'", "'F'", "'R'", "'W'", 
      "'J'", "'A'", "'S'", "'M'", "'D'", "'Q'", "'U'", "'G'", "'L'", "'E'", 
      "'.'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "PERIOD", "WS", "COMMENT", "IDENT", "INTLIT", "ESCAPE", 
      "CHARLIT", "STRLIT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  lettersParserStaticData = staticData.release();
}

}

LettersParser::LettersParser(TokenStream *input) : LettersParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LettersParser::LettersParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LettersParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *lettersParserStaticData->atn, lettersParserStaticData->decisionToDFA, lettersParserStaticData->sharedContextCache, options);
}

LettersParser::~LettersParser() {
  delete _interpreter;
}

const atn::ATN& LettersParser::getATN() const {
  return *lettersParserStaticData->atn;
}

std::string LettersParser::getGrammarFileName() const {
  return "Letters.g4";
}

const std::vector<std::string>& LettersParser::getRuleNames() const {
  return lettersParserStaticData->ruleNames;
}

const dfa::Vocabulary& LettersParser::getVocabulary() const {
  return lettersParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LettersParser::getSerializedATN() const {
  return lettersParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LettersParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LettersParser::ProgramContext::EOF() {
  return getToken(LettersParser::EOF, 0);
}

std::vector<LettersParser::StmtListContext *> LettersParser::ProgramContext::stmtList() {
  return getRuleContexts<LettersParser::StmtListContext>();
}

LettersParser::StmtListContext* LettersParser::ProgramContext::stmtList(size_t i) {
  return getRuleContext<LettersParser::StmtListContext>(i);
}

std::vector<LettersParser::DeclListContext *> LettersParser::ProgramContext::declList() {
  return getRuleContexts<LettersParser::DeclListContext>();
}

LettersParser::DeclListContext* LettersParser::ProgramContext::declList(size_t i) {
  return getRuleContext<LettersParser::DeclListContext>(i);
}


size_t LettersParser::ProgramContext::getRuleIndex() const {
  return LettersParser::RuleProgram;
}


std::any LettersParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::ProgramContext* LettersParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LettersParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 260048766) != 0)) {
      setState(44);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case LettersParser::T__5:
        case LettersParser::T__7:
        case LettersParser::T__8:
        case LettersParser::T__9:
        case LettersParser::IDENT:
        case LettersParser::INTLIT:
        case LettersParser::ESCAPE:
        case LettersParser::CHARLIT:
        case LettersParser::STRLIT: {
          setState(42);
          stmtList();
          break;
        }

        case LettersParser::T__0:
        case LettersParser::T__1:
        case LettersParser::T__2:
        case LettersParser::T__3:
        case LettersParser::T__4: {
          setState(43);
          declList();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    match(LettersParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

LettersParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LettersParser::DeclContext *> LettersParser::DeclListContext::decl() {
  return getRuleContexts<LettersParser::DeclContext>();
}

LettersParser::DeclContext* LettersParser::DeclListContext::decl(size_t i) {
  return getRuleContext<LettersParser::DeclContext>(i);
}


size_t LettersParser::DeclListContext::getRuleIndex() const {
  return LettersParser::RuleDeclList;
}


std::any LettersParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::DeclListContext* LettersParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 2, LettersParser::RuleDeclList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(52); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(51);
              decl();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(54); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

LettersParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LettersParser::DeclContext::PERIOD() {
  return getToken(LettersParser::PERIOD, 0);
}

tree::TerminalNode* LettersParser::DeclContext::IDENT() {
  return getToken(LettersParser::IDENT, 0);
}

LettersParser::AssignExprContext* LettersParser::DeclContext::assignExpr() {
  return getRuleContext<LettersParser::AssignExprContext>(0);
}


size_t LettersParser::DeclContext::getRuleIndex() const {
  return LettersParser::RuleDecl;
}


std::any LettersParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::DeclContext* LettersParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, LettersParser::RuleDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 62) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(57);
      match(LettersParser::IDENT);
      break;
    }

    case 2: {
      setState(58);
      assignExpr();
      break;
    }

    default:
      break;
    }
    setState(61);
    match(LettersParser::PERIOD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

LettersParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LettersParser::StmtContext *> LettersParser::StmtListContext::stmt() {
  return getRuleContexts<LettersParser::StmtContext>();
}

LettersParser::StmtContext* LettersParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<LettersParser::StmtContext>(i);
}


size_t LettersParser::StmtListContext::getRuleIndex() const {
  return LettersParser::RuleStmtList;
}


std::any LettersParser::StmtListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitStmtList(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::StmtListContext* LettersParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 6, LettersParser::RuleStmtList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(64); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(63);
              stmt();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(66); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

LettersParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LettersParser::IfStmtContext* LettersParser::StmtContext::ifStmt() {
  return getRuleContext<LettersParser::IfStmtContext>(0);
}

LettersParser::AssignStmtContext* LettersParser::StmtContext::assignStmt() {
  return getRuleContext<LettersParser::AssignStmtContext>(0);
}

LettersParser::ReadStmtContext* LettersParser::StmtContext::readStmt() {
  return getRuleContext<LettersParser::ReadStmtContext>(0);
}

LettersParser::WriteStmtContext* LettersParser::StmtContext::writeStmt() {
  return getRuleContext<LettersParser::WriteStmtContext>(0);
}

LettersParser::JumpStmtContext* LettersParser::StmtContext::jumpStmt() {
  return getRuleContext<LettersParser::JumpStmtContext>(0);
}


size_t LettersParser::StmtContext::getRuleIndex() const {
  return LettersParser::RuleStmt;
}


std::any LettersParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::StmtContext* LettersParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 8, LettersParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LettersParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(68);
        ifStmt();
        break;
      }

      case LettersParser::IDENT:
      case LettersParser::INTLIT:
      case LettersParser::ESCAPE:
      case LettersParser::CHARLIT:
      case LettersParser::STRLIT: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        assignStmt();
        break;
      }

      case LettersParser::T__7: {
        enterOuterAlt(_localctx, 3);
        setState(70);
        readStmt();
        break;
      }

      case LettersParser::T__8: {
        enterOuterAlt(_localctx, 4);
        setState(71);
        writeStmt();
        break;
      }

      case LettersParser::T__9: {
        enterOuterAlt(_localctx, 5);
        setState(72);
        jumpStmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

LettersParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LettersParser::ExprContext* LettersParser::IfStmtContext::expr() {
  return getRuleContext<LettersParser::ExprContext>(0);
}

std::vector<LettersParser::StmtListContext *> LettersParser::IfStmtContext::stmtList() {
  return getRuleContexts<LettersParser::StmtListContext>();
}

LettersParser::StmtListContext* LettersParser::IfStmtContext::stmtList(size_t i) {
  return getRuleContext<LettersParser::StmtListContext>(i);
}


size_t LettersParser::IfStmtContext::getRuleIndex() const {
  return LettersParser::RuleIfStmt;
}


std::any LettersParser::IfStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitIfStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::IfStmtContext* LettersParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, LettersParser::RuleIfStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    match(LettersParser::T__5);
    setState(76);
    expr();
    setState(77);
    match(LettersParser::T__6);
    setState(79); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(78);
      stmtList();
      setState(81); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 260048704) != 0));
    setState(83);
    match(LettersParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignStmtContext ------------------------------------------------------------------

LettersParser::AssignStmtContext::AssignStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LettersParser::AssignExprContext* LettersParser::AssignStmtContext::assignExpr() {
  return getRuleContext<LettersParser::AssignExprContext>(0);
}

tree::TerminalNode* LettersParser::AssignStmtContext::PERIOD() {
  return getToken(LettersParser::PERIOD, 0);
}


size_t LettersParser::AssignStmtContext::getRuleIndex() const {
  return LettersParser::RuleAssignStmt;
}


std::any LettersParser::AssignStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitAssignStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::AssignStmtContext* LettersParser::assignStmt() {
  AssignStmtContext *_localctx = _tracker.createInstance<AssignStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, LettersParser::RuleAssignStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    assignExpr();
    setState(86);
    match(LettersParser::PERIOD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReadStmtContext ------------------------------------------------------------------

LettersParser::ReadStmtContext::ReadStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LettersParser::LocalContext* LettersParser::ReadStmtContext::local() {
  return getRuleContext<LettersParser::LocalContext>(0);
}

tree::TerminalNode* LettersParser::ReadStmtContext::PERIOD() {
  return getToken(LettersParser::PERIOD, 0);
}


size_t LettersParser::ReadStmtContext::getRuleIndex() const {
  return LettersParser::RuleReadStmt;
}


std::any LettersParser::ReadStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitReadStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::ReadStmtContext* LettersParser::readStmt() {
  ReadStmtContext *_localctx = _tracker.createInstance<ReadStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, LettersParser::RuleReadStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(LettersParser::T__7);
    setState(89);
    local();
    setState(90);
    match(LettersParser::PERIOD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WriteStmtContext ------------------------------------------------------------------

LettersParser::WriteStmtContext::WriteStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LettersParser::WriteStmtContext::PERIOD() {
  return getToken(LettersParser::PERIOD, 0);
}

tree::TerminalNode* LettersParser::WriteStmtContext::INTLIT() {
  return getToken(LettersParser::INTLIT, 0);
}

tree::TerminalNode* LettersParser::WriteStmtContext::CHARLIT() {
  return getToken(LettersParser::CHARLIT, 0);
}

tree::TerminalNode* LettersParser::WriteStmtContext::ESCAPE() {
  return getToken(LettersParser::ESCAPE, 0);
}

LettersParser::VecLitContext* LettersParser::WriteStmtContext::vecLit() {
  return getRuleContext<LettersParser::VecLitContext>(0);
}

LettersParser::LocalContext* LettersParser::WriteStmtContext::local() {
  return getRuleContext<LettersParser::LocalContext>(0);
}


size_t LettersParser::WriteStmtContext::getRuleIndex() const {
  return LettersParser::RuleWriteStmt;
}


std::any LettersParser::WriteStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitWriteStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::WriteStmtContext* LettersParser::writeStmt() {
  WriteStmtContext *_localctx = _tracker.createInstance<WriteStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, LettersParser::RuleWriteStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(LettersParser::T__8);
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(93);
      match(LettersParser::INTLIT);
      break;
    }

    case 2: {
      setState(94);
      match(LettersParser::CHARLIT);
      break;
    }

    case 3: {
      setState(95);
      match(LettersParser::ESCAPE);
      break;
    }

    case 4: {
      setState(96);
      vecLit();
      break;
    }

    case 5: {
      setState(97);
      local();
      break;
    }

    default:
      break;
    }
    setState(100);
    match(LettersParser::PERIOD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JumpStmtContext ------------------------------------------------------------------

LettersParser::JumpStmtContext::JumpStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LettersParser::JumpStmtContext::IDENT() {
  return getToken(LettersParser::IDENT, 0);
}

tree::TerminalNode* LettersParser::JumpStmtContext::PERIOD() {
  return getToken(LettersParser::PERIOD, 0);
}


size_t LettersParser::JumpStmtContext::getRuleIndex() const {
  return LettersParser::RuleJumpStmt;
}


std::any LettersParser::JumpStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitJumpStmt(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::JumpStmtContext* LettersParser::jumpStmt() {
  JumpStmtContext *_localctx = _tracker.createInstance<JumpStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, LettersParser::RuleJumpStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(LettersParser::T__9);
    setState(103);
    match(LettersParser::IDENT);
    setState(104);
    match(LettersParser::PERIOD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

LettersParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LettersParser::AddSubExprContext* LettersParser::ExprContext::addSubExpr() {
  return getRuleContext<LettersParser::AddSubExprContext>(0);
}


size_t LettersParser::ExprContext::getRuleIndex() const {
  return LettersParser::RuleExpr;
}


std::any LettersParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::ExprContext* LettersParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 20, LettersParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    addSubExpr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddSubExprContext ------------------------------------------------------------------

LettersParser::AddSubExprContext::AddSubExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LettersParser::MulDivExprContext *> LettersParser::AddSubExprContext::mulDivExpr() {
  return getRuleContexts<LettersParser::MulDivExprContext>();
}

LettersParser::MulDivExprContext* LettersParser::AddSubExprContext::mulDivExpr(size_t i) {
  return getRuleContext<LettersParser::MulDivExprContext>(i);
}


size_t LettersParser::AddSubExprContext::getRuleIndex() const {
  return LettersParser::RuleAddSubExpr;
}


std::any LettersParser::AddSubExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitAddSubExpr(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::AddSubExprContext* LettersParser::addSubExpr() {
  AddSubExprContext *_localctx = _tracker.createInstance<AddSubExprContext>(_ctx, getState());
  enterRule(_localctx, 22, LettersParser::RuleAddSubExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(108);
    mulDivExpr();
    setState(113);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(109);
        _la = _input->LA(1);
        if (!(_la == LettersParser::T__10

        || _la == LettersParser::T__11)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(110);
        mulDivExpr(); 
      }
      setState(115);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MulDivExprContext ------------------------------------------------------------------

LettersParser::MulDivExprContext::MulDivExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LettersParser::EqualsExprContext *> LettersParser::MulDivExprContext::equalsExpr() {
  return getRuleContexts<LettersParser::EqualsExprContext>();
}

LettersParser::EqualsExprContext* LettersParser::MulDivExprContext::equalsExpr(size_t i) {
  return getRuleContext<LettersParser::EqualsExprContext>(i);
}


size_t LettersParser::MulDivExprContext::getRuleIndex() const {
  return LettersParser::RuleMulDivExpr;
}


std::any LettersParser::MulDivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LettersVisitor*>(visitor))
    return parserVisitor->visitMulDivExpr(this);
  else
    return visitor->visitChildren(this);
}

LettersParser::MulDivExprContext* LettersParser::mulDivExpr() {
  MulDivExprContext *_localctx = _tracker.createInstance<MulDivExprContext>(_ctx, getState());
  enterRule(_localctx, 24, LettersParser::RuleMulDivExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(116);
    equalsExpr();
    setState(121);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(117);
        _la = _input->LA(1);
        if (!(_la == LettersParser::T__12

        || _la == LettersParser::T__13)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(118);
        equalsExpr(); 
      }
      setState(123);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
